# gary_developer_examples

./: README.md
arms/: package.xml  setup.cfg  setup.py
arms/arms/: arms.py
arms/launch/: arms.launch.py
components/arms/: arms.yaml
components/arms/commands/: arms  right_communication
components/arms/dockerfiles/: jetsonorin.dockerfile
components/cameras/commands/: left_communication  left_gripper
components/chest/commands/: right_gripper
components/cv/: arms_automation.yaml
components/cv/commands/: both_arms
components/cv/dockerfiles/: jetsonorin.dockerfile  x86_64.dockerfile
components/grippers/commands/: left_arm
components/leds/: leds.yaml
components/leds/commands/: leds
components/leds/dockerfiles/: jetsonorin.dockerfile
components/sounds/: sounds.yaml
components/sounds/commands/: right_arm  sounds
components/sounds/dockerfiles/: jetsonorin.dockerfile
gary_examples_package/: package.xml  setup.cfg  setup.py
gary_examples_package/config/: left_arm.yaml  left_gripper.yaml  right_gripper.yaml
gary_examples_package/gary_examples_packages/arms/: arms_node.py
gary_examples_package/gary_examples_packages/cameras/: cameras_node.py
gary_examples_package/gary_examples_packages/chest/: chest_node.py
gary_examples_package/gary_examples_packages/cv/: cv_node.py
gary_examples_package/launch/: both_arms.launch.py
leds/: CMakeLists.txt  led_node.py  package.xml  setup.py
pymoveit2/: package.xml
pymoveit2/pymoveit2/: moveit2.py
sounds/: CMakeLists.txt  package.xml  setup.py  sound_node.py
(+3 files in other folders)
