<?xml version="1.0"?>
<package format="3">
  <name>sounds</name>
  <version>0.0.1</version>
  <description>Sound node example package for Gary's sound engine.</description>
  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>raya_audio_msgs</exec_depend>
  <exec_depend>raya_status_msgs</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
